--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "author": "NuclearThemes",
     "version": "1.0.0",
     "main": "index.js",
+    "homepage": ".",
     "private": true,
     "scripts": {
         "dev": "next dev",
