--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
-NEXT_PUBLIC_API_URL=http://localhost:3000/api
+NEXT_PUBLIC_SITE_URL=http://cfranco.dev
+NEXT_PUBLIC_API_URL=http://cfranco.dev/api
 NEXT_PUBLIC_DISCUSS_SHORTNAME=
