--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "swiper": "^8.1.4"
     },
     "devDependencies": {
+        "@netlify/plugin-nextjs": "^4.38.1",
         "autoprefixer": "^10.4.4",
         "eslint": "8.12.0",
         "eslint-config-next": "12.1.4",
